--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         display: inline-block;
     }
     #container {
-        display: none;
+        display: block;
     }
     #container-edit {
         display: none;
